--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+getenv/
+.getenv
 
 # Distribution / packaging
 .Python
@@ -35,6 +37,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.vscode/
 
 # Ignore Mac DS_Store files
 .DS_Store
+
+__pycache__/
